fix modal UI overflow cutoff error

--- a/web/assets/picluster-ui.css
+++ b/web/assets/picluster-ui.css
@@ -220,6 +220,10 @@ textarea {
   cursor: pointer;
 }
 
+#menu {
+
+}
+
 #login {
 }
 
@@ -233,8 +237,6 @@ textarea {
   display: block;
   border-width: 0px;
   width:100%;
-  height:100%;
-  margin-bottom: 5%;
 }
 
 #logo {
